gpu: Fix a bug in the new ReturnFrontBuffer() path for pepper.

|offscreen_saved_frame_buffer_| is used for multisampled buffers, and a
workaround. An implicit assumption of GLES2CmdDecoder is that
|offscreen_saved_color_texture_| is always bound to
|offscreen_saved_frame_buffer_|. The new ReturnFrontBuffer() logic violated this
assumption.

BUG=611016
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2015693002
Cr-Commit-Position: refs/heads/master@{#396129}

Former-commit-id: 95ab6d12e8518a9d86abc9b694b9b023543ba5bd